1px alignment fix for particles change indicator

--- a/platforms/common/scss/admin/_layout-manager.scss
+++ b/platforms/common/scss/admin/_layout-manager.scss
@@ -410,7 +410,7 @@
 
             > span .title i {
                 position: absolute;
-                left: -9px;
+                left: -10px;
                 top: 12px;
             }
 
